# zero2prod

./: .env  Cargo.toml  Dockerfile
.github/workflows/: prod.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
