[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = "0.12.3"


[dependencies]
actix-web = "4.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
config = "0.14"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
sqlx = {version = "0.7", default_features = false, features = ["runtime-tokio-rustls","macros","postgres","uuid","chrono","migrate"]}
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.8", features = ["v4"] }


