[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = "0.12.3"


[dependencies]
actix-web = "4.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
config = "0.14"
once_cell = "1"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
sqlx = {version = "0.7", default_features = false, features = ["runtime-tokio-rustls","macros","postgres","uuid","chrono","migrate"]}
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
uuid = { version = "1.8", features = ["v4"] }
tracing-actix-web = "0.7"

